fixed the overlapping nav buttons

--- a/src/assets/css/style2.css
+++ b/src/assets/css/style2.css
@@ -36,6 +36,10 @@ nav {
   color: white;
 }
 
+.nav-btn {
+  white-space: normal;
+}
+
 .projects {
   display: flex;
   margin-bottom: 5px;
@@ -69,7 +73,7 @@ nav {
 
 /* contact form */
 
-.contact-container {
+.contact-div {
   padding-top: 85px;
   margin-top: auto;
   border: #444442;
